# wandb-cicd

./: README.md  ci_ex2.py
.github/workflows/: ci_ex1.yaml  ci_ex2.yaml
Github/: Makefile
Github/cxe-tmp/: main.py  pyproject.toml
