[tool.poetry]
name = "cxe-tmp"
version = "0.1.0"
description = ""
authors = ["Alexander Molero <alemoler@ucm.es>"]
readme = "README.md"
packages = [{include = "cxe_tmp"}]

[tool.poetry.dependencies]
python = "^3.10"
currencyconverter = "^0.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
